minor bug fixes, spelled name of school correctly for once in my life

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <!--TITLE HEADER NAVBAR BLOCK-->
     <div class="conatainer-fluid text-center">
-    <h1>Chmiborazo Choose Your Own Adventure!</h1>
+    <h1>Chimborazo Choose Your Own Adventure!</h1>
     <figure class="text-center">
         <p>Welcome to our student showcase, where Grade 4 authors have transformed into game designers. </p>
         <p>By merging the art of narrative writing with the logic of computer science, our students used Twine to build digital "Choose Your Own Adventure" stories.</p>
